--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <!-- Stats -->
   <section class="stats">
     <div class="container">
-      <h3 class="stas-heading text-center my-1">
+      <h3 class="stats-heading text-center my-1">
         Welcome to the best platform for building applications of all types with modern architecture and scaling
       </h3>
 
