--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
     integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
     crossorigin="anonymous" />
-    <link rel="stylesheet" href="css/utilities.css">
-    <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/utilities.css">
+  <link rel="stylesheet" href="css/style.css">
   <title>Loruki |　Cloud Hosting For Everyone</title>
 </head>
 
@@ -78,6 +78,19 @@
           <h3>2,343,265</h3>
           <p class="text-secondary">Projects</p>
         </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Cli -->
+  <section class="cli">
+    <div class="container grid">
+      <img src="images/cli.png" alt="">
+      <div class="card">
+        <h3>Easy to use, cross platform CLI</h3>
+      </div>
+      <div class="card">
+        <h3>Deploy in seconds</h3>
       </div>
     </div>
   </section>
